<?xml version="1.0"?>
<package format="3">
  <name>websockets</name>
  <version>0.0.0</version>
  <description>websockets</description>
  <maintainer email="1327165187@qq.com">ldq</maintainer>
  <license>ldq</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-catkin-pkg</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python3</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  
</package>